[giphy] fix (giphy-selecter.scss) fix line spacing for error message

--- a/packages/plugin-giphy/statics/styles/giphy-selecter.scss
+++ b/packages/plugin-giphy/statics/styles/giphy-selecter.scss
@@ -119,7 +119,7 @@
   font-weight: 300;
   text-align: center;
   color: #000000;
-  line-height: 30px;
+  line-height: 1.57;
   padding: 0px 20px;
   box-sizing: border-box;
   position: absolute;
